@@ -1,6 +1,6 @@
 #!/bin/sh
 # -*- coding: utf-8 -*-
-# Copyright (C) 2012-2014, 2016, 2019 Laboratoire de Recherche et
+# Copyright (C) 2012-2014, 2016, 2019, 2023 Laboratoire de Recherche et
 # Développement de l'Epita (LRDE).
 #
 # This file is part of Spot, a model checking library.
@@ -65,3 +65,6 @@ ltlcross -D \
 # Spot 2.8.  We use ltl2tgba twice so ltlcross build cross-products.
 ltlcross --verbose ltl2tgba ltl2tgba \
 -f '(G(F((a1)&(X(X(b1))))))&(G(F((a2)&(X(X(b2))))))&(G(F((a3)&(X(X(b3))))))'
+
+# Issue #524.
+ltlcross ltl2tgba -f '!(X(v3 | G!v5) | ((Xv5 & !(v5 & !X!v3)) U !v5))'
